# simple-knowledge-graph-mcp

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Dockerfile  Dockerfile.n8n  ENTITY_EXTRACTION_PROMPT.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  LICENSE  MCP_AGENTIC_IMPLEMENTATION_PLAN.md  MCP_TOOLS.md  Makefile  Maximum_Context_Scientific_Analyzer.ipynb  N8N_TRIAL_README.md  PHASE1_COMPLETION_SUMMARY.md  PRD.md  PREREQUISITES.md  PRODUCT_ROADMAP.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  Scientific_Paper_Analyzer.ipynb  activate_graphrag_env.sh  citation_analysis_report.md  claude_desktop_config.json  clear_chromadb.sh  configure_entity_extractor.py  create_github_repo.md  debug_cell2.py  debug_entity_extraction.py  demo_doc.txt  docs_links.md  github_setup.sh  graphrag_config.json  (+29 more)
chroma_graph_db/: chroma.sqlite3
config/: __init__.py  database_config.py
configs/: entity_extractor_academic.yaml  entity_extractor_default.yaml  entity_extractor_fast.yaml  orchestrator_default.yaml  orchestrator_fast.yaml  orchestrator_grobid.yaml  orchestrator_research.yaml
database/: add_embeddings_schema.sql  database_setup.sql
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_FLOW.md  CLI_REFERENCE.md  COMPONENT_INTERACTIONS.md  Clean_Notebook_Architecture.md  DATA_FLOW_VISUALIZATION.md  DOCSGPT_N8N_INTEGRATION_GUIDE.md  Enterprise_GraphRAG_Integration_Analysis.md  FINAL_ARCHITECTURE_DECISION.md  HISTORICAL_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  PRD.md  (+14 more)
(+350 files in other folders)
