[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.0",
    "fastmcp>=0.2.0",
    "neo4j>=5.0.0",
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.0.0",
    "torch>=2.0.0",
    "typing-extensions>=4.0.0",
]
