[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.2.0",
    "neo4j>=5.0.0",
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.0.0",
    "torch>=2.0.0",
    "typing-extensions>=4.0.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-groq>=0.2.0",
    "langsmith>=0.1.0",
    "watchdog>=3.0.0",
    "requests>=2.31.0",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
]
